--- a/style.css
+++ b/style.css
@@ -1,85 +1,17 @@
-html {
-}
-
 body {
-    height: 100%;
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
     font-family: 'Raleway', sans-serif;
-    margin: 0px;
-    padding: 0px;
-    background-color: white;
+}
+.content {
+    flex: 1;
+    padding-bottom: 70px;
+}
+.banner {
+    margin-top: 56px;
 }
 
-nav {
-    position: fixed;
-    top: 0px;
-    width: 100%;
-    height: 70px;
-    background-color: lightgoldenrodyellow;
-    font-size: 20px;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-around;
-}
-
-nav div {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-around;
-}
-
-nav a {
-    color: black;
-    display: block;
-    font-weight: 700;
-}
-
-main {
-    margin: 0px;
-    padding: 0px;
-    background-color: red;
-    width: 100%;
-    height: 100%;
-}
-
-header {
-    background-color: lightgoldenrodyellow;
-    height: 200px;
-    margin-top: 70px;
-    font-size: 36px;
-    display: flex;
-    flex-direction:column;
-    justify-content: center;
-}
-
-header div {
-    text-align: center;
-}
-
-header div span#title {
-    
-}
-
-header div span#subTitle {
-    font-size: 14px;
-    font-style: italic;
-}
-
-section#content {
-    width: 100%;
-    height: 100%;
-    background-color: lightgray;
-    padding: 10px;
-}
-
-footer {
-    background-color: lightgoldenrodyellow;
-    height: 50px;
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-around;
-}
-
-footer div {
-    text-align: center;
+.keyPoint {
+    max-height: 70px;
 }
